@@ -12,6 +12,8 @@ Package org.springframework.webflow.engine.builder
 * Removed END_STATE_VIEW_FLAG_PARAMETER from TextToViewSelector. As a result, the endingViewSelector
   method of AbstractFlowBuilder was also removed.
 * Removed newDefaultFlowServiceLocator method from AbstractFlowBuildingFlowRegistryFactoryBean. 
+* Fixed bug in RefreshableFlowDefinitionHolder. It was not correctly reloading flows when resources
+  changed.
 
 Package org.springframework.webflow.engine.support
 * Renamed DefaultFlowAttributeMapper to ConfigurableFlowAttributeMapper for clarity and to avoid confusion.
